syntax = "proto3";
package tm;

option go_package = "github.com/tendermint/classic/crypto/multisig/pb";

// imports
import "google/protobuf/any.proto";

// messages
message PubKeyMultisig {
	uint64 K = 1;
	repeated google.protobuf.Any PubKeys = 2;
}